# jollynotllb

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirement.text
backend/: .dockerignore  Dockerfile  README.md  agents.py  constitution.index  debug_backend.py  main.py  pdagents.py  pdmodels.py  rag.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/simulation/: page.tsx
frontend/components/: ClientDashboard.tsx
frontend/lib/: supabaseClient.ts
